# cpp-registry-playground

./: CMakeLists.txt  README.md  local-build-msvc2019.cmd  local-build.cmd
.github/workflows/: build-mingw.yml
src/: main.cpp
